# Airport-Viewer

./: .gitignore  .gitmodules  CONTRIBUTING.txt  README.md  sql.txt
Code/BD/: BD.sql
Code/BD/Old/: BDcreateTable.sql
Code/C/: CMakeLists.txt  Pseudo code algorithme A Star  pseudo Dijkstra
Code/C/src/: CMakeLists.txt  dijgraph.c  dijgraph.h  extract.c  graph.h  jsonParse.c
Code/C/test/: graphTest.c
Code/JAVA/: .gitignore  build.gradle  settings.gradle
Code/JAVA/gradle/wrapper/: gradle-wrapper.properties
Code/JAVA/src/main/java/com/PPII/: Main.java
Code/JAVA/src/main/java/com/PPII/GUI/: DatabaseGui.java  GuiMain.java  SelectGui.java
Code/JAVA/src/main/java/com/PPII/database/: CreateDataBase.java  PopulateDataBase.java
Code/JAVA/src/main/java/com/PPII/entities/: Airline.java  Airport.java  Countries.java  EquipmentList.java  FlightNumber.java  Localization.java  Plane.java  Route.java  RouteListe.java
Code/JAVA/src/main/java/com/PPII/exports/: JSONexport.java  SelectInterestingData.java
Code/JAVA/src/main/java/com/PPII/parsers/: AirlineParser.java  AirportParser.java  FlightNumberParser.java  Parser.java  PlaneParser.java  RouteParser.java
Code/JAVA/src/main/java/com/PPII/repository/: AirlineRepository.java  AirportRepository.java  CountryRepository.java  EquipmentListRepository.java  FlightNumberRepository.java  LocalizationRepository.java  PlaneRepository.java  Repository.java  RouteListeRepository.java  RouteRepository.java
Code/JAVA/src/main/resources/: countriesCode.csv  gui.fxml  select.fxml
Others/: remover.py  remover2.py
(+19 files in other folders)
